<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".WalletsFragment">
    <data>
        <variable
            name="daemonModel"
            type="org.electroncash.electroncash3.DaemonModel"/>
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvWalletName"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:text="@{daemonModel.walletName}"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/no_wallet"/>

        <TextView
            android:id="@+id/tvBalance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{daemonModel.walletBalance}"
            android:textAppearance="@style/Amount.Large"
            app:layout_constraintStart_toStartOf="@+id/tvWalletName"
            app:layout_constraintTop_toBottomOf="@+id/tvWalletName"
            tools:text="0.12345678"/>

        <!-- TODO make unit configurable -->
        <TextView
            android:id="@+id/tvBalanceUnit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:text="BCH"
            app:layout_constraintBaseline_toBaselineOf="@+id/tvBalance"
            app:layout_constraintStart_toEndOf="@+id/tvBalance"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvTransactions"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toTopOf="@+id/btnSend"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvBalance"
            tools:itemCount="2"
            tools:listitem="@layout/transaction"/>

        <Button
            android:id="@+id/btnSend"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/send"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnReceive"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"/>

        <Button
            android:id="@+id/btnReceive"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/receive"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnSend"
            app:layout_constraintTop_toTopOf="@+id/btnSend"/>
    </android.support.constraint.ConstraintLayout>
</layout>